# pw3

./: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  shamans.ipynb
.ipynb_checkpoints/: shamans-checkpoint.ipynb
scripts/: run_all.py
src/: CTestTestfile.cmake  Makefile  adventure.cpp  adventure.h  cmake_install.cmake
src/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bottomlessBagTest  bottomlessBagTest.cpp  cmake_install.cmake  crystalSelectionTest  crystalSelectionTest.cpp  sandArrangementTest  sandArrangementTest.cpp  sort1000.csv  sort100000.csv  sort_test
